[gd_scene load_steps=4 format=3 uid="uid://cngcitewp6i3d"]

[ext_resource type="Script" uid="uid://d20webiih6nqs" path="res://Script/enemy1.gd" id="1_7k104"]
[ext_resource type="Texture2D" uid="uid://bl2da0yunnjhr" path="res://towerDefense_tile046.png" id="2_4gyqm"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4gyqm"]
size = Vector2(59.75, 57)

[node name="Enemy1" type="Area2D" groups=["Enemy"]]
script = ExtResource("1_7k104")
damage = 0
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(-2, 33)
scale = Vector2(0.46875, 0.46875)
texture = ExtResource("2_4gyqm")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1.125, 33)
shape = SubResource("RectangleShape2D_4gyqm")

[node name="DamageTimer" type="Timer" parent="."]

[node name="HealthBar" type="ProgressBar" parent="."]
offset_left = -20.0
offset_top = -40.0
offset_right = -16.0
offset_bottom = -13.0
max_value = 3.0
value = 3.0

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="timeout" from="DamageTimer" to="." method="_on_damage_timer_timeout"]
